--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "5.0.0",
-    "typescript": "^4.1.6"
+    "react-scripts": "5.0.0"
   },
   "scripts": {
+    "dev": "webpack --watch",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
