--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "react-scripts": "5.0.0"
   },
   "scripts": {
-    "start": "node index.tsx",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -58,5 +58,5 @@
   "bugs": {
     "url": "https://github.com/yuutan1017/taskController/issues"
   },
-  "homepage": "./"
+  "homepage": "https://github.com/yuutan1017/taskController#readme"
 }
