--- a/package.json
+++ b/package.json
@@ -10,20 +10,23 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "@types/jest": "^24.9.1",
-    "@types/node": "^12.20.46",
+    "@types/node": "^12.20.47",
     "@types/react": "^16.14.23",
     "@types/react-dom": "^16.9.14",
     "@types/react-redux": "^7.1.22",
     "@types/react-router-dom": "^5.3.1",
     "axios": "^0.26.0",
+    "nodemon": "^2.0.15",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "5.0.0"
+    "react-scripts": "5.0.0",
+    "typescript": "^4.6.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "npx tsc -w",
+    "dev": "npx nodemon",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -31,32 +34,17 @@
   "eslintConfig": {
     "extends": "react-app"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "description": "taskController",
-  "main": "index.js",
-  "devDependencies": {},
+  "main": "src/index.tsx",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/yuutan1017/taskController.git"
   },
-  "keywords": [
-    "portfolio"
-  ],
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/yuutan1017/taskController/issues"
   },
-  "homepage": "https://github.com/yuutan1017/taskController#readme"
+  "homepage": "https://github.com/yuutan1017/taskController#readme",
+  "description": ""
 }
