--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^17.0.21",
     "@types/react": "^17.0.40",
     "@types/react-dom": "^17.0.13",
+    "@types/react-modal": "^3.13.1",
     "@types/react-redux": "^7.1.23",
     "@types/react-router-dom": "^5.3.1",
     "axios": "^0.26.1",
@@ -21,6 +22,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^6.15.8",
+    "react-modal": "^3.14.4",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
