--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-redux": "^7.1.23",
     "@types/react-router-dom": "^5.3.1",
     "axios": "^0.26.1",
+    "dayjs": "^1.11.0",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
